--- a/index.html
+++ b/index.html
@@ -34,25 +34,28 @@
         <span>Github</span>
       </div>
       <div class="tag ">
-        <img src="assets/Icons/HTML.svg " alt="Github">
-        <span>Github</span>
+        <img src="assets/Icons/HTMl.svg " alt="HMTL">
+        <span>HTML</span>
       </div>
       <div class="tag">
-        <img src="assets/Icons/GitHub.svg" alt="Github">
-        <span>Github</span>
+        <img src="assets/Icons/CSS.svg" alt="CSS">
+        <span>CSS</span>
       </div>
       <div class="tag">
-        <img src="assets/Icons/GitHub.svg" alt="Github">
-        <span>Github</span>
+        <img src="assets/Icons/JavaScript.svg" alt="JavaScript">
+        <span>JavaScript</span>
       </div>
       <div class="tag">
-        <img src="assets/Icons/GitHub.svg" alt="Github">
-        <span>Github</span>
+        <img src="assets/Icons/React.svg" alt="React">
+        <span>React</span>
       </div>
       <div class="tag">
-        <img src="assets/Icons/GitHub.svg" alt="Github">
-        <span>Github</span>
+        <img src="assets/Icons/Node.js.svg" alt="Node.JS">
+        <span>Node.js</span>
       </div>
+    </div>
+    <div id="arrow">
+      <img src="assets/arrow/arrow.svg" alt="Flecha para baixo">
     </div>
     </header>
    </section>
