--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Portfolio Dev</title>
 </head>
 <body>
+  <main class="container">
    <section id="intro">
     <header>
         <div id="avatar"> 
@@ -58,7 +59,12 @@
       <img src="assets/arrow/arrow.svg" alt="Flecha para baixo">
     </div>
     </header>
-   </section>
-    
+   
+    <section id="middle">
+
+    </section>
+   
+
+    </main>
 </body>
 </html>
