--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span>Github</span>
       </div>
       <div class="tag ">
-        <img src="assets/Icons/HTMl.svg " alt="HMTL">
+        <img src="assets/Icons/HTML.svg " alt="HMTL">
         <span>HTML</span>
       </div>
       <div class="tag">
